--- a/boot3-13-security-stu/src/main/resources/templates/index.html
+++ b/boot3-13-security-stu/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-  Welcome  to my web
+    Welcome  to my web<br>
+    <a th:href="@{/hello}">hello</a> <br/>
 </body>
 </html>
